--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -14,7 +14,7 @@
 <nav th:fragment="nav">
     <div class="container">
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Nord</a>
+            <a href="#" class="brand-logo">Nörd</a>
             <div th:switch="${#authorization.expression('isAuthenticated()')}">
                 <ul th:case="${true}">
                     <li sec:authentication="name"></li>
@@ -31,8 +31,6 @@
 
                 </ul>
             </div>
-
-
         </div>
     </div>
 </nav>
