Hægt að bæta við upplýsingum um Nörd

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -13,6 +13,7 @@
     <a sec:authorize="hasRole('ROLE_ADMIN')" href="/user/add">Bæta við notanda</a>
     <a sec:authorize="hasAnyRole('ROLE_ADMIN, ROLE_USER')" href="/user/userList">Listi yfir notendur</a>
     <a sec:authorize="hasRole('ROLE_ADMIN')" href="/ad/add">Bæta við auglýsingu</a>
+    <a sec:authorize="hasRole('ROLE_ADMIN')" href="/about/add">Bæta við upplýsingum um Nörd</a>
 </div>
 
 
