--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -14,7 +14,8 @@
 <nav th:fragment="nav">
     <div class="container">
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Nörd</a>
+            <a href="/" class="brand-logo">Nörd</a>
+            <a href="/about">Um Nörd</a>
             <div th:switch="${#authorization.expression('isAuthenticated()')}">
                 <ul th:case="${true}">
                     <li sec:authentication="name"></li>
