--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head th:fragment="head">
-    <meta charset="UTF-8"/>
+    <meta content ="text/html" charset="UTF-8"/>
     <meta description="viewport" content="width=device-width, initial-scale=1"/>
 
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
