--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -15,7 +15,7 @@
 
     <input type="text" th:field="*{username}" placeholder="Notandanafn"/>
 
-    <input type="text" th:field="*{password}" placeholder="Lykilorð"/>
+    <input type="password" th:field="*{password}" placeholder="Lykilorð"/>
 
     <label th:for="${#ids.next('roleID')}">Gera að stjórnanda?</label>
 
