Óþarfa importum hent út og viðbótarcomment

--- a/src/main/resources/templates/about/about.html
+++ b/src/main/resources/templates/about/about.html
@@ -17,7 +17,7 @@
 </div>
 
 
-<!-- For each news item -->
+<!-- For each info item -->
 <h1>Um Nörd</h1>
 <div th:each="about : ${about}" >
     <h3 th:text="${about.title}"></h3>
