Lagfæringar á klösum, skjölun

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<!-- For each news item -->
+<!-- For each user item -->
 <div th:each="user : ${user}" class="user-items">
     <div>
         <h3 th:text="${user.username}"></h3>
