--- a/src/main/resources/templates/ad/form.html
+++ b/src/main/resources/templates/ad/form.html
@@ -8,13 +8,19 @@
 </head>
 <body>
 
-<form th:action="@{${action}}" method="post" th:object="${ad}">
+<form enctype="multipart/form-data" th:action="@{${action}}" method="post" th:object="${ad}">
     <input type="hidden" th:field="*{id}"/>
 
     <h2 th:text="${heading}">Búa til auglýsingu</h2>
 
     <input type="text" th:field="*{link}" placeholder="Linkur"/>
-    <input type="file" th:fields="*{adLogo}" placeholder="Auglýsing"/>
+
+    <div class="file-wrapper">
+        <input type="file" id="file" name="file"/>
+        <span class="placeholder" data-placeholder="Choose an image...">Choose an image...</span>
+        <label for="file" class="button">Browse</label>
+    </div>
+
 
     <button th:text="${submit}" type="submit"></button>
 </form>
