--- a/src/main/resources/templates/event/form.html
+++ b/src/main/resources/templates/event/form.html
@@ -19,6 +19,8 @@
 
     <input type="text" th:field="*{host}" placeholder="Í boði.." />
 
+    <input type="date" th:field="*{timeOfEvent}" placeholder="2007-12-03T10:15:30" />
+
     <button th:text="${submit}" type="submit"></button>
 </form>
 
