--- a/src/main/resources/templates/information/form.html
+++ b/src/main/resources/templates/information/form.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form th:action="@{${action}}" method="post" th:object="${about}">
+<form th:action="@{${action}}" method="post" th:object="${infoNord}">
     <input type="hidden" th:field="*{id}"/>
 
     <h2 th:text="${heading}">Að setja inn upplýsingar um Nörd</h2>
@@ -18,6 +18,7 @@
     <textarea cols="86" rows ="20" th:field="*{content}" placeholder="Innihald"></textarea>
 
     <button th:text="${submit}" type="submit"></button>
+
 </form>
 
 
