--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -6,6 +6,18 @@ GENERAL
   box-sizing: border-box;
 }
 
+/* To push the footer down */
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+/* To push the footer down */
+main {
+    flex: 1;
+}
+
 img {
   width: 100%;
 }
@@ -45,6 +57,8 @@ nav {
   flex-direction: row;
   justify-content: space-around;
   position: relative;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 nav div {
@@ -79,16 +93,60 @@ MENUS
   position: absolute;
   margin: 20px 0;
   padding: 5px 10px;
+  border-left: 4px solid coral;
+  font-weight: bold;
+}
+
+.menu ul li {
+    margin: 10px 0;
+}
+
+.menu li a {
+    padding: 5px;
+}
+
+.dropdownCat {
+    margin: 0;
+}
+
+.dropdownCat li {
+    padding: 5px 0;
 }
 
 #userMenu {
-  margin-top: -3px;
+  margin-top: -1px;
 }
+
+#userMenu ul {
+    margin: 0;
+    padding: 0;
+}
+
+#userMenu li {
+    padding: 10px;
+    margin: 0;
+}
+
 
 #hamburgerMenu {
   right: 0;
 }
 
+.submenu {
+  top: 0;
+  border: 4px solid coral;
+  margin-top: 35px;
+  right: 50%
+}
+
+#adminMenu li, #aboutMenu li, #infoMenu li {
+    margin: 10px 0;
+}
+
+#adminSubMenuHeading {
+  padding: 5px;
+  margin-bottom: 10px;
+}
 
 /*==============================
 ADS
@@ -96,8 +154,9 @@ ADS
 
 #ads {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
-  height: 80px;
+  height: 90px;
   justify-content: space-around;
   overflow: hidden; /* Display only the top row */
   padding: 0;
@@ -105,7 +164,7 @@ ADS
 
 #ads img {
   width: 80px;
-  margin: 0 2px;
+  margin: 5px 2px 0 2px;
   border-radius: 5%;
   border: 2px solid #444;
 }
@@ -148,7 +207,7 @@ nav div li {
 }
 
 .menu {
-  background-color: rgba(49, 49, 49, 0.9);
+  background-color: rgb(49, 49, 49);
 }
 
 footer {
@@ -159,6 +218,15 @@ footer {
   color: #fff;
 }
 
+#adminSubMenu {
+    background-color: rgb(49, 49, 49);
+}
+
+.adminLink {
+  background-color: firebrick;
+  display: inline-block;
+  padding: 3px;
+}
 
 
 /*==============================
@@ -180,9 +248,10 @@ MEDIA QUERIES
     margin-left: auto;
   }
   #ads {
-    height: 100px;
+    height: 120px;
   }
   #ads img {
+    margin-top: 10px;
     width: 100px;
   }
   #userMenu {
