--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,6 +7,7 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
     <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
+    <!--<link rel="stylesheet" th:href="@{/assets/css/articles.css}"/>-->
 
     <title>Nörd | Nemendafélag</title>
 </head>
@@ -19,7 +20,7 @@
 
         <div id="userImage">
             <a href="javascript:void(0);" onclick="toggleUserMenu()">
-                <img th:src="@{/assets/img/me.jpg}" alt="The user" />
+                <img th:src="@{/assets/img/me.jpg}" alt="User image" />
             </a>
             <div id="userMenu" class="menu" th:switch="${#authorization.expression('isAuthenticated()')}">
                 <ul th:case="${true}">
@@ -41,8 +42,21 @@
         <div id="hamburgerIcon"  th:switch="${#authorization.expression('isAuthenticated()')}">
             <a href="javascript:void(0);" onclick="toggleHamburgerMenu()">&#9776;</a>
             <ul id="hamburgerMenu" class="menu">
-                <li>Um Nörd</li>
-                <ul>
+                <li sec:authorize="hasRole('ROLE_ADMIN')" id="adminSubMenuHeading">
+                    <a class="adminLink" href="javascript:void(0);"
+                       onclick="toggleAdminSubMenu()">Admin</a>
+                    <ul id="adminSubMenu" class="menu submenu dropdownCat">
+                        <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/news/add">Búa til frétt</a></li>
+                        <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/event/add">Búa til viðburð</a></li>
+                        <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/user/add">Bæta við notanda</a></li>
+                        <li><a sec:authorize="hasAnyRole('ROLE_ADMIN, ROLE_USER')" href="/user/userList">Listi yfir notendur</a></li>
+                        <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/ad/add">Bæta við auglýsingu</a></li>
+                        <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/infoNord/add">Bæta við upplýsingum um Nörd</a></li>
+                        <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/infoBoard/add">Bæta við upplýsingum um stjórn/miðstjórn</a></li>
+                    </ul>
+                </li>
+                <li class="burgerSubHeading">Um Nörd</li>
+                <ul class="dropdownCat">
                     <li><a href="#">Hvað er Nörd?</a></li>
                     <li><a href="#">Stjórn og miðstjórn</a></li>
                     <li><a href="#">Lög Nörd</a></li>
@@ -50,22 +64,21 @@
                     <li><a href="#">Myndir</a></li>
                     <li th:if="${#authorization.expression('isAuthenticated()')}"><a href="#">Meðlimir</a></li>
                 </ul>
-                <li>Upplýsingatorg</li>
-                <ul>
+                <li class="burgerSubHeading">Upplýsingatorg</li>
+                <ul class="dropdownCat">
                     <li><a href="#">Lokaverkefni</a></li>
                     <li><a href="#">Glósubanki</a></li>
                 </ul>
-                <li>Notandi</li>
-                <ul th:case="${true}">
+                <li class="burgerSubHeading">Notandi</li>
+                <ul class="dropdownCat" th:case="${true}">
                     <li><a href="#">Mín síða</a></li>
                     <li>
                         <form class="logout inline" th:action="@{/logout}" method="post">
                             <button type="submit">Útskrá</button>
                         </form>
                     </li>
-                    <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="#">Admin</a></li>
                 </ul>
-                <ul th:case="${false}">
+                <ul class="dropdownCat" th:case="${false}">
                     <li>
                         <a href="/login">Innskrá</a>
                     </li>
@@ -93,8 +106,17 @@
             </ul>
         </div>
 
-        <div>
-            <a sec:authorize="hasRole('ROLE_ADMIN')" href="#">Admin</a>
+        <div id="admin">
+            <a style="background-color: firebrick; padding: 20px;" sec:authorize="hasRole('ROLE_ADMIN')" href="javascript:void(0);" onclick="toggleAdminMenu()">Admin</a>
+            <ul id="adminMenu" class="menu">
+                <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/news/add">Búa til frétt</a></li>
+                <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/event/add">Búa til viðburð</a></li>
+                <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/user/add">Bæta við notanda</a></li>
+                <li><a sec:authorize="hasAnyRole('ROLE_ADMIN, ROLE_USER')" href="/user/userList">Listi yfir notendur</a></li>
+                <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/ad/add">Bæta við auglýsingu</a></li>
+                <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/infoNord/add">Bæta við upplýsingum um Nörd</a></li>
+                <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/infoBoard/add">Bæta við upplýsingum um stjórn/miðstjórn</a></li>
+            </ul>
         </div>
     </nav>
 </header>
