validation step one

--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -148,6 +148,16 @@ MENUS
   margin-bottom: 10px;
 }
 
+.logoutBtn {
+    background:none!important;
+    color:inherit;
+    border:none;
+    font: inherit;
+    cursor: pointer;
+}
+
+
+
 /*==============================
 ADS
 ==============================*/
