--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -15,6 +15,7 @@
     <body>
         <header th:replace="layout :: header"></header>
         <div th:replace="ad/ad :: ads"></div>
+        <div th:replace="layout :: flash"></div>
 
         <main>
 
