--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -27,7 +27,7 @@
                     <li><a href="#">Mín síða</a></li>
                     <li>
                         <form class="logout inline" th:action="@{/logout}" method="post">
-                            <button type="submit">Útskrá</button>
+                            <button class="logoutBtn" type="submit">Útskrá</button>
                         </form>
                     </li>
                 </ul>
@@ -74,7 +74,7 @@
                     <li><a href="#">Mín síða</a></li>
                     <li>
                         <form class="logout inline" th:action="@{/logout}" method="post">
-                            <button type="submit">Útskrá</button>
+                            <button class="logoutBtn" type="submit">Útskrá</button>
                         </form>
                     </li>
                 </ul>
