--- a/src/main/resources/static/assets/css/eventDetails.css
+++ b/src/main/resources/static/assets/css/eventDetails.css
@@ -106,7 +106,7 @@ main {
 }
 
 .capacityInfo {
-	margin-top: 30px;
+	margin: 20px 0;
 	text-align: center;
 }
 
@@ -142,6 +142,7 @@ COUNTDOWN TIMER
 #countdown {
 	text-align: center;
 	font-size: 1.2em;
+	margin: 15px 0;
 }
 
 #countdown p {
@@ -151,6 +152,12 @@ COUNTDOWN TIMER
 
 #info {
     font-weight: bold;
+    margin: 15px;
+}
+
+#timer {
+    margin: 150px 0;
+    padding: 10px;
 }
 
 /*==============================
@@ -160,13 +167,13 @@ REGISTRATION BUTTON
 #button {
 	text-align: center;
 	margin: 15px 0;
-	height: 50px;
 }
 
 #button button {
 	width: 60%;
 	height: 50px;
 	font-weight: bold;
+	margin: 10px;
 }
 
 
@@ -184,14 +191,17 @@ COLORS
     font-weight: bold;
 }
 
+.regBtn {
+    color: #444;
+    border-radius: 3%;
+}
+
 .registerButton {
-    color: green;
-    border: 1px solid green;
+    border: 2px solid green;
 }
 
 .unregisterButton {
-    color: red;
-    border: 1px solid red;
+    border: 2px solid red;
 }
 
 .date {
@@ -200,8 +210,6 @@ COLORS
 
 #timer {
     background-color: rgb(49, 49, 49);
-    padding: 10px 20px;
-    display: inline-block;
 }
 
 .timerInt {
