--- a/src/main/resources/templates/ad/form.html
+++ b/src/main/resources/templates/ad/form.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <title>Nemendafélagið Nörd</title>
-    <link rel="stylesheet" href="../../css/normalize.css" />
+    <link rel="stylesheet" href="@{/assets/css/normalize.css}" />
 </head>
 <body>
-
+<div th:replace="layout :: flash"></div>
 <form enctype="multipart/form-data" th:action="@{${action}}" method="post" th:object="${ad}">
     <input type="hidden" th:field="*{id}"/>
 
     <h2 th:text="${heading}">Búa til auglýsingu</h2>
 
     <input type="text" th:field="*{link}" placeholder="Linkur"/>
+    <div class="error-message" th:if="${#fields.hasErrors('link')}" th:errors="*{link}"></div>
 
     <div class="file-wrapper">
         <input type="file" id="file" name="file"/>
