--- a/src/main/resources/templates/event/eventDetails.html
+++ b/src/main/resources/templates/event/eventDetails.html
@@ -48,52 +48,12 @@
             <p th:text="${news.description}"></p>
         </div>
 
-        <div id="countdown">
-            <p id="info" class="infoText">&#9749;</p>
-            <p class="registrationOpens" th:text="${#temporals.format(news.registrationOpens, 'dd:MM:yyyy:HH:mm')}"></p>
-            <p class="registrationCloses" th:text="${#temporals.format(news.registrationCloses, 'dd:MM:yyyy:HH:mm')}"></p>
-            <p id="timer">
-                <span class="timerInt hours">--</span>
-                <span class="timerString">KLST</span>
-                <span class="timerInt minutes">--</span>
-                <span class="timerString">MÍN</span>
-                <span class="timerInt seconds">--</span>
-                <span class="timerString">SEK</span>
-            </p>
-        </div>
-
-        <div id="button">
-            <!--<button th:case="${false}" disabled="true">Þú ert ekki innskráður</button>-->
-            <!-- Make conditions based on whether the authenticated user is registered for the event -->
-            <div th:if="${#authorization.expression('isAuthenticated()')}" th:switch="${registrationService.isRegisteredForEvent(news, user)}">
-                <div th:case="${false}">
-                    <form th:action="@{/register}" method="post">
-                        <input name="eventId" type="hidden" th:value="${news.id}" />
-                        <input name="isRegistered" type="hidden" th:value="${true}" />
-                        <button class="registerButton regBtn" type="submit" style="display: none;">Skrá mig</button>
-                    </form>
-                </div>
-                <div th:case="${true}">
-                    <form th:action="@{/unregister}" method="post">
-                        <input name="newsId" type="hidden" th:value="${news.id}" />
-                        <button class="unregisterButton regBtn" type="submit" style="display: none;">Afskrá mig</button>
-                    </form>
-                </div>
-            </div>
-
-            <div th:if="!${#authorization.expression('isAuthenticated()')}">
-                <p id="notSignedIn">Þú ert ekki innskráður</p>
-            </div>
-        </div>
-
-
-
         <p class="infoText sectionInfo">Nánari upplýsingar</p>
         <section class="section">
             <div id="address">
                 <p th:text="${news.host}"></p><a th:href="@{${news.linkLocation}}">
-                    <img th:src="@{/assets/img/ja_logo.png}" alt="já.is logo" />
-                </a>
+                <img th:src="@{/assets/img/ja_logo.png}" alt="já.is logo" />
+            </a>
                 <p th:text="${news.location}"></p>
             </div>
 
@@ -115,6 +75,49 @@
                 + ' klukkan ' + #temporals.format(news.registrationCloses, 'HH:mm')
                 }"></p>
             </div>
+        </section>
+
+
+        <p class="infoText sectionInfo">Skráning</p>
+        <section class="section">
+            <div id="countdown">
+                <div id="info" class="infoText">&#9749;</div>
+                <p class="registrationOpens" th:text="${#temporals.format(news.registrationOpens, 'dd:MM:yyyy:HH:mm')}"></p>
+                <p class="registrationCloses" th:text="${#temporals.format(news.registrationCloses, 'dd:MM:yyyy:HH:mm')}"></p>
+                <div id="timer" style="display: none;">
+                    <span class="timerInt hours">--</span>
+                    <span class="timerString">KLST</span>
+                    <span class="timerInt minutes">--</span>
+                    <span class="timerString">MÍN</span>
+                    <span class="timerInt seconds">--</span>
+                    <span class="timerString">SEK</span>
+                </div>
+            </div>
+
+            <div id="button">
+                <!--<button th:case="${false}" disabled="true">Þú ert ekki innskráður</button>-->
+                <!-- Make conditions based on whether the authenticated user is registered for the event -->
+                <div th:if="${#authorization.expression('isAuthenticated()')}" th:switch="${registrationService.isRegisteredForEvent(news, user)}">
+                    <div th:case="${false}">
+                        <form th:action="@{/register}" method="post">
+                            <input name="eventId" type="hidden" th:value="${news.id}" />
+                            <input name="isRegistered" type="hidden" th:value="${true}" />
+                            <button class="registerButton regBtn" type="submit" style="display: none;">Skrá mig</button>
+                        </form>
+                    </div>
+                    <div th:case="${true}">
+                        <form th:action="@{/unregister}" method="post">
+                            <input name="newsId" type="hidden" th:value="${news.id}" />
+                            <button class="unregisterButton regBtn" type="submit" style="display: none;">Afskrá mig</button>
+                        </form>
+                    </div>
+                </div>
+
+                <div th:if="!${#authorization.expression('isAuthenticated()')}">
+                    <p id="notSignedIn">Þú ert ekki innskráður</p>
+                </div>
+            </div>
+
             <div class="capacityInfo" th:with="n=${#lists.size(registrationService.findRegistrationsByEvent(news))}">
                 <p th:if="${news.isPriorityEvent} == true">Forgangsviðburður</p>
                 <p th:text="${'Fjöldi sæta: ' + news.capacity}"></p>
@@ -127,7 +130,12 @@
         <div th:if="${#authorization.expression('isAuthenticated()')}">
             <p class="infoText sectionInfo">Skráningarlisti</p>
             <section class="section">
-                <p th:each="registration : ${registrationService.findRegistrationsByEvent(news)}" th:text="${registration.user.username}"></p>
+                <div th:each="registration,iter : ${registrationService.findRegistrationsByEvent(news)}">
+                    <p th:if="${news.capacity >= iter.count}" th:text="${iter.count + '. ' + registration.user.username}"></p>
+                    <p th:if="${iter.count > news.capacity}" th:text="${iter.count + '. ' + registration.user.username}"
+                    style="color: #888;"></p>
+                </div>
+
             </section>
         </div>
 
